se arreglo la estructura de la cabecera

--- a/index.html
+++ b/index.html
@@ -10,36 +10,30 @@
 </head>
 
 <body>
-
 <div class="container">
     <div class="row" id="bannerPrincipal">
-<!--Columna de doce logo-->
-        <div class="col-12" id="logoRow">
-    </div>
-        <div class="row">
+        <div class="col-12" id="logoRoi">
+            <h1>3 Elementos que definenen tu ROI</h1>
+        </div>
             <div class="col-5">
                 <div class="row">
                     <div class="col-12">
                         <h1>Es importante pensar en Coaching como <spam>NEGOCIO</spam></h1>
                         <p>Para eso debes salir del viejo paradigma y aceptar Coaching como Proceso de Desarrollo con rentabilidad que permite vivir de tu pasión.</p>
+                        </div>
+                    <div class="col-4"></div>
+                    <div class="col-4"></div>
+                    <div class="col-4"></div>
                     </div>
-                   <!--Una debajo de la otra-->
-                    <div class="col-4"></div>
-                    <div class="col-4"></div>
-                    <div class="col-4"></div>
+                </div>
+                <div class="col-7">
+                        <div class="col">
+                            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/264717362?color=4b314c&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                            </div>
+                        </div>
                 </div>
             </div>
-
-            <div class="col-7">
-                <div class="col">
-                    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/264717362?color=4b314c&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
-                </div>
-            </div>
-
         </div>
-
-    </div>
-</div>
 <div class="container" id="descripcionPrograma">
     <div class="row">
         <div class="col-4">
