se agregaron las fuentes

--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 <body>
 <div class="container">
     <div class="row" id="bannerPrincipal">
-        <div class="col-12" id="logoRoi">
-            <h1>3 Elementos que definenen tu ROI</h1>
+        <div class="col-3"></div>
+        <div class="col-6" id="logoRoi">
+            <h1 class="justify-content-center">3 Elementos que definenen tu ROI</h1>
         </div>
+        <div class="col-3"></div>
             <div class="col-5">
                 <div class="row">
                     <div class="col-12">
-                        <h1>Es importante pensar en Coaching como <spam>NEGOCIO</spam></h1>
+                        <h1>Es importante pensar en Coaching como <b>NEGOCIO</b></h1>
                         <p>Para eso debes salir del viejo paradigma y aceptar Coaching como Proceso de Desarrollo con rentabilidad que permite vivir de tu pasión.</p>
                         </div>
                     <div class="col-4"></div>
