Iconos, Imágenes y Botón

--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
                     <div class="col-4"></div>
                     </div>
                 </div>
-                <div class="col-7">
+                <div class="col-7" >
                         <div class="col">
                             <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/264717362?color=4b314c&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                             </div>
+                            <br>
+                            <button type="button" class="btn btn-outline-primary offset-3" >Suscribirme al programa gratuito</button>
                         </div>
                 </div>
             </div>
@@ -47,16 +49,16 @@
 </div>
 <div class="container" id="iconos">
     <div class="row">
-        <div class="col-4">
-            <img src="" alt="">
+        <div class="col-4 col-centered">
+            <i class="fab fa-youtube fa-3x offset-2"></i>
             <h3>Ciclo de Videos</h3>
         </div>
         <div class="col-4">
-            <img src="" alt="">
+            <i class="fa fa-user fa-3x offset-3"></i>
             <h3>Un webinar en vivo</h3>
         </div>
         <div class="col-4">
-            <img src="" alt="">
+            <i class="fa fa-graduation-cap fa-3x offset-2"></i>
             <h3>Certificado de Participacion</h3>
         </div>
     </div>
@@ -110,7 +112,7 @@
 
 
 
-
+<script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 </body>
