Color de banner principal y imagen título del mismo fue agregada

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 </head>
 
 <body>
+
 <div class="container">
     <div class="row" id="bannerPrincipal">
         <div class="col-3"></div>
         <div class="col-6" id="logoRoi">
-            <h1 class="justify-content-center">3 Elementos que definenen tu ROI</h1>
+            <img src="images/logoTitulo.png" alt="LogoTitulo" style="">
         </div>
         <div class="col-3"></div>
+        <div class="w-100"></div>
             <div class="col-5">
                 <div class="row">
                     <div class="col-12">
@@ -33,7 +35,7 @@
                             <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/264717362?color=4b314c&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                             </div>
                             <br>
-                            <button type="button" class="btn btn-outline-primary offset-3" >Suscribirme al programa gratuito</button>
+                            <button type="button" class="btn btn-outline-primary" >Suscribirme al programa gratuito</button>
                         </div>
                 </div>
             </div>
