fondos ancho completos y colores de fondo finales. Estructura inicial final

--- a/index.html
+++ b/index.html
@@ -41,79 +41,97 @@
             </div>
         </div>
         </header>
-<div class="container" id="descripcionPrograma">
-    <div class="row">
-        <div class="col-4">
-            <h1>PROGRAMA GRATUITO: Coaching Ejecutivo</h1>
-        </div>
-        <div class="col-8">
-            <p>Yo sé que tú eres un coach íntegro y bien formado, que tienes todas las capacidades y avales para ejercer esta profesión pero en momentos sentimos miedos o inseguridades pensando en que el Coaching podría no ser un buen negocio de vida. Es el momento de que cumplas tu sueño y conviertas tu pasión en un oficio que te genere el retorno que tanto quieres y mereces. Por eso yo, Fernando Celis, hemos diseñado este programa.</p>
-            <p>Si te suscribes, recibirás un regalo hecho a tu medida: una guía de cómo puedes desarrollar tu propuesta de valor como coach. </p>
-        </div>
-    </div>
-</div>
-<div class="container" id="iconos">
-    <div class="row">
-        <div class="col-4 col-centered">
-            <i class="fab fa-youtube fa-3x offset-2"></i>
-            <h3>Ciclo de Videos</h3>
-        </div>
-        <div class="col-4">
-            <i class="fa fa-user fa-3x offset-3"></i>
-            <h3>Un webinar en vivo</h3>
-        </div>
-        <div class="col-4">
-            <i class="fa fa-graduation-cap fa-3x offset-2"></i>
-            <h3>Certificado de Participacion</h3>
-        </div>
-    </div>
-</div>
-<div class="container" id="fernandoCelis">
-    <div class="row">
-        <div class="col-7">
-            <h1>Fernando Celis - Master Coach Trainer</h1>
-            <div id="obtenYa">
-                <h1>OBTEN YA</h1>
-                <h2>Tu Guía Práctica para el Coach</h2>
-                <p>Como obsequio por tu suscripción te enviaré una guía en la que conocerás la importancia y el impacto del Coaching como Modelo de Negocio exitoso en el mundo y te daré algunos consejos para diseñar tu propia propuesta de valor.</p>
+<div id="descripcionPrograma" class="dark">
+    <div class="container" >
+        <div class="row">
+            <div class="col-4">
+                <h1>PROGRAMA GRATUITO: Coaching Ejecutivo</h1>
+            </div>
+            <div class="col-8">
+                <p>Yo sé que tú eres un coach íntegro y bien formado, que tienes todas las capacidades y avales para ejercer esta profesión pero en momentos sentimos miedos o inseguridades pensando en que el Coaching podría no ser un buen negocio de vida. Es el momento de que cumplas tu sueño y conviertas tu pasión en un oficio que te genere el retorno que tanto quieres y mereces. Por eso yo, Fernando Celis, hemos diseñado este programa.</p>
+                <p>Si te suscribes, recibirás un regalo hecho a tu medida: una guía de cómo puedes desarrollar tu propuesta de valor como coach. </p>
             </div>
         </div>
-        <div class="col-5"></div>
     </div>
 </div>
-<div class="container" id="contador">
-    <div class="row">
-        <div class="col-12">
-            <h1>El webinar comienza en</h1>
+<div id="iconos" class="grey">
+    <div class="container">
+        <div class="row">
+            <div class="col-4 col-centered">
+                <i class="fab fa-youtube fa-3x offset-2"></i>
+                <h3>Ciclo de Videos</h3>
+            </div>
+            <div class="col-4">
+                <i class="fa fa-user fa-3x offset-3"></i>
+                <h3>Un webinar en vivo</h3>
+            </div>
+            <div class="col-4">
+                <i class="fa fa-graduation-cap fa-3x offset-2"></i>
+                <h3>Certificado de Participacion</h3>
+            </div>
         </div>
-        <div class="col-12"></div>
     </div>
 </div>
-<div class="container" id="listonListoUnirte">
-    <div class="row">
-        <div class="col-12"><H1>LISTO PARA UNIRTE A ESTA NUEVA EXPERIENCIA?</H1></div>
+<div id="fernandoCelis" class="dark">
+    <div class="container" id="">
+        <div class="row">
+            <div class="col-7">
+                <h1>Fernando Celis - Master Coach Trainer</h1>
+                <div id="obtenYa">
+                    <h1>OBTEN YA</h1>
+                    <h2>Tu Guía Práctica para el Coach</h2>
+                    <p>Como obsequio por tu suscripción te enviaré una guía en la que conocerás la importancia y el impacto del Coaching como Modelo de Negocio exitoso en el mundo y te daré algunos consejos para diseñar tu propia propuesta de valor.</p>
+                </div>
+            </div>
+            <div class="col-5"></div>
+        </div>
     </div>
 </div>
-<div class="container" id="descripcionContinuum">
-    <div class="row">
-        <div class="col-2"></div>
-        <div class="col-8"></div>
-        <div class="col-2"></div>
+<div id="contador" class="primary">
+    <div class="container">
+        <div class="row">
+            <div class="col-4"></div>
+            <div class="col-8"><H1>EL WEBINAR COMIENZA EN</H1></div>
+            <div class="col-4"></div>
+            <div class="col-12"></div>
+        </div>
     </div>
 </div>
-<div class="container" id="facebookComentarios">
-    <div class="row">
-        <div class="col"></div>
+<div id="listonListoUnirte" class="secondary">
+    <div class="container">
+        <div class="row">
+            <div class="col-4"></div></div>
+            <div class="col-8"><H1>LISTO PARA UNIRTE A ESTA NUEVA EXPERIENCIA?</H1></div>
+            <div class="col-4"></div>
+        </div>
     </div>
 </div>
+<div id="descripcionContinuum" class="light">
+    <div class="container">
+        <div class="row">
+            <div class="col-8 ilcContinuum">
+                <h1>PROGRAMA DE COACHING CONTINUUM ILC</h1>
+            </div>
+            <div class="col-4 secondform"></div>
+        </div>
+    </div>
+</div>
+<div id="facebookComentarios" class="grey">
+    <div class="container" id="">
+        <div class="row">
+            <div class="col">COMENTARIOS DE FACE</div>
+        </div>
+    </div>
+</div>
+<footer id="logosPatrocinadores" class="light">
+    <div class="container">
+        <div class="row">
+            <div class="col">PATROCINADORES</div>
+        </div>
+    </div>
+</footer>
 
 
-
-<div class="container" id="logosPatrocinadores">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
 
 
 
