--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
 </div>
 <div id="fernandoCelis" class="dark">
-    <div class="container" id="">
+    <div class="container">
         <div class="row">
             <div class="col-7">
                 <h1>Fernando Celis - Master Coach Trainer</h1>
@@ -81,9 +81,13 @@
                     <h1>OBTEN YA</h1>
                     <h2>Tu Guía Práctica para el Coach</h2>
                     <p>Como obsequio por tu suscripción te enviaré una guía en la que conocerás la importancia y el impacto del Coaching como Modelo de Negocio exitoso en el mundo y te daré algunos consejos para diseñar tu propia propuesta de valor.</p>
+                    <br>
+                    <img src="images/folleto.png" class="img-fluid" alt="">
                 </div>
             </div>
-            <div class="col-5"></div>
+            <div class="col-5">
+                <img src="images/fernando.png" alt="">
+            </div>
         </div>
     </div>
 </div>
@@ -100,7 +104,7 @@
 <div id="listonListoUnirte" class="secondary">
     <div class="container">
         <div class="row">
-            <div class="col-4"></div></div>
+            <div class="col-4"></div>
             <div class="col-8"><H1>LISTO PARA UNIRTE A ESTA NUEVA EXPERIENCIA?</H1></div>
             <div class="col-4"></div>
         </div>
