--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
   <link rel="stylesheet" href="css/styles.css">
   <title>Landing Ceo II</title>
 </head>
-
 <body>
 <header id="bannerPrincipal">
     <div class="container">
-    <div class="row">
-        <div class="col-3"></div>
-        <div class="col-6" id="logoRoi">
-            <h1 class="justify-content-center">3 Elementos que definenen tu ROI</h1>
+      <div class="row justify-content-center">
+        <div class="col-5">
+            <img src="images/logotitulo.png" id="logoRoi" alt="">
         </div>
-        <div class="col-3"></div>
-            <div class="col-5">
+        <div class="w-100"></div>
+        <div class="col-5">
                 <div class="row">
                     <div class="col-12">
                         <h1>Es importante pensar en Coaching como <b>NEGOCIO</b></h1>
@@ -35,7 +33,7 @@
                             </div>
                         </div>
                         <div class="col-12">
-                            <button type="button" class="btn btn-outline-primary btn-lg btn-block" >Suscribirme al programa gratuito</button>
+                            <button type="button" class="btn btn-outline-primary btn-lg btn-block" id="suscribetePrograma">Suscribirme al programa gratuito</button>
                         </div>
                 </div>
             </div>
@@ -56,17 +54,17 @@
 </div>
 <div id="iconos" class="grey">
     <div class="container">
-        <div class="row">
+        <div class="row justify-content-center">
             <div class="col-4 col-centered">
-                <i class="fab fa-youtube fa-3x offset-2"></i>
+                <i class="fab fa-youtube fa-3x"></i>
                 <h3>Ciclo de Videos</h3>
             </div>
-            <div class="col-4">
-                <i class="fa fa-user fa-3x offset-3"></i>
+            <div class="col-4 col-centered">
+                <i class="fa fa-user fa-3x"></i>
                 <h3>Un webinar en vivo</h3>
             </div>
-            <div class="col-4">
-                <i class="fa fa-graduation-cap fa-3x offset-2"></i>
+            <div class="col-4 col-centered">
+                <i class="fa fa-graduation-cap fa-3x"></i>
                 <h3>Certificado de Participacion</h3>
             </div>
         </div>
@@ -82,31 +80,28 @@
                     <h2>Tu Guía Práctica para el Coach</h2>
                     <p>Como obsequio por tu suscripción te enviaré una guía en la que conocerás la importancia y el impacto del Coaching como Modelo de Negocio exitoso en el mundo y te daré algunos consejos para diseñar tu propia propuesta de valor.</p>
                     <br>
-                    <img src="images/folleto.png" class="img-fluid" alt="">
+                    <img src="images/folleto.png" class="img-fluid" alt="" id="folleto">
                 </div>
             </div>
-            <div class="col-5">
+            <div class="col-5 align-self-end" >
                 <img src="images/fernando.png" alt="">
             </div>
         </div>
     </div>
-</div>
 <div id="contador" class="primary">
     <div class="container">
-        <div class="row">
-            <div class="col-4"></div>
-            <div class="col-8"><H1>EL WEBINAR COMIENZA EN</H1></div>
-            <div class="col-4"></div>
-            <div class="col-12"></div>
-        </div>
-    </div>
+          <div class="row justify-content-center">
+              <div class="col-5"><H1>EL WEBINAR COMIENZA EN</H1></div>
+              <div class="w-100"></div>
+              <div class="col-8">Contador</div>
+          </div>
+      </div>
+</div>
 </div>
 <div id="listonListoUnirte" class="secondary">
     <div class="container">
-        <div class="row">
-            <div class="col-4"></div>
+        <div class="row justify-content-center">
             <div class="col-8"><H1>LISTO PARA UNIRTE A ESTA NUEVA EXPERIENCIA?</H1></div>
-            <div class="col-4"></div>
         </div>
     </div>
 </div>
@@ -134,8 +129,6 @@
         </div>
     </div>
 </footer>
-
-
 
 
 
