alineacion vertical programagratuito, incorporacion de logos banner principal

--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
                     <div class="col-12">
                         <h1>Es importante pensar en Coaching como <b>NEGOCIO</b></h1>
                         <p>Para eso debes salir del viejo paradigma y aceptar Coaching como Proceso de Desarrollo con rentabilidad que permite vivir de tu pasión.</p>
-                        </div>
-                    <div class="col-4"></div>
-                    <div class="col-4"></div>
-                    <div class="col-4"></div>
+                    </div>
+                    <div class="w-100"></div>
+                      <div class="col-4"><img src="images/fernandologo.png" alt="" class="logos"></div>
+                      <div class="col-4"><img src="images/continuum.png" alt="" class="logos"></div>
+                      <div class="col-4"><img src="images/ilc.png" alt="" class="logos"></div>
                     </div>
                 </div>
                 <div class="col-7" >
@@ -42,7 +43,7 @@
 <div id="descripcionPrograma" class="dark">
     <div class="container" >
         <div class="row">
-            <div class="col-4">
+            <div class="col-4 align-self-center">
                 <h1>PROGRAMA GRATUITO: Coaching Ejecutivo</h1>
             </div>
             <div class="col-8">
@@ -101,7 +102,7 @@
 <div id="listonListoUnirte" class="secondary">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-8"><H1>LISTO PARA UNIRTE A ESTA NUEVA EXPERIENCIA?</H1></div>
+            <div class="col-8"><H1>¿LISTO PARA UNIRTE A ESTA NUEVA EXPERIENCIA?</H1></div>
         </div>
     </div>
 </div>
@@ -129,8 +130,6 @@
         </div>
     </div>
 </footer>
-
-
 
 <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
 <script src="js/jquery-3.2.1.min.js"></script>
