Cambios html Libreria y Estilos Fernando Imagen

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
                     <div class="col-12">
                         <h1>Es importante pensar en Coaching como <b>NEGOCIO</b></h1>
                         <p>Para eso debes salir del viejo paradigma y aceptar Coaching como Proceso de Desarrollo con rentabilidad que permite vivir de tu pasión.</p>
-                        </div>
-                    <div class="col-4"></div>
-                    <div class="col-4"></div>
-                    <div class="col-4"></div>
+                    </div>
+                    <div class="w-100"></div>
+                      <div class="col-4"><img src="images/fernandologo.png" alt="" class="logos"></div>
+                      <div class="col-4"><img src="images/continuum.png" alt="" class="logos"></div>
+                      <div class="col-4"><img src="images/ilc.png" alt="" class="logos"></div>
                     </div>
                 </div>
                 <div class="col-7" >
@@ -48,7 +49,7 @@
 <div id="descripcionPrograma" class="dark">
     <div class="container" >
         <div class="row">
-            <div class="col-4">
+            <div class="col-4 align-self-center">
                 <h1>PROGRAMA GRATUITO: Coaching Ejecutivo</h1>
             </div>
             <div class="col-8">
@@ -79,18 +80,17 @@
 <div id="fernandoCelis" class="dark">
     <div class="container">
         <div class="row">
-            <div class="col-7">
+            <div class="col-6">
                 <h1>Fernando Celis - Master Coach Trainer</h1>
                 <div id="obtenYa">
                     <h1>OBTEN YA</h1>
                     <h2>Tu Guía Práctica para el Coach</h2>
                     <p>Como obsequio por tu suscripción te enviaré una guía en la que conocerás la importancia y el impacto del Coaching como Modelo de Negocio exitoso en el mundo y te daré algunos consejos para diseñar tu propia propuesta de valor.</p>
-                    <br>
                     <img src="images/folleto.png" class="img-fluid" alt="" id="folleto">
                 </div>
             </div>
-            <div class="col-5 align-self-end" >
-                <img src="images/fernando.png" alt="">
+            <div class="col-6 align-self-end" >
+                <img id="fernandoFoto" src="images/fernando.png" alt="">
             </div>
         </div>
     </div>
@@ -107,7 +107,7 @@
 <div id="listonListoUnirte" class="secondary">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-8"><H1>LISTO PARA UNIRTE A ESTA NUEVA EXPERIENCIA?</H1></div>
+            <div class="col-8"><H1>¿LISTO PARA UNIRTE A ESTA NUEVA EXPERIENCIA?</H1></div>
         </div>
     </div>
 </div>
@@ -137,8 +137,7 @@
 </footer>
 
 
-
-<script src="js/fontawesome5.0.10/svg-with-js/js/fontawesome-all.js"></script>
+<script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 </body>
