Agregado colores en logos y texto

--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-4 col-centered">
-                <i class="fab fa-youtube fa-3x"></i>
+                <i class="fab fa-youtube fa-3x Rojo"></i>
                 <h3>Ciclo de Videos</h3>
             </div>
             <div class="col-4 col-centered">
                 <i class="fa fa-user fa-4x"></i>
-                <h3>Un webinar en vivo</h3>
+                <h3 class="Rojo">Un webinar en vivo</h3>
             </div>
             <div class="col-4 col-centered">
-                <i class="fa fa-graduation-cap fa-3x"></i>
+                <i class="Rojo fa fa-graduation-cap fa-3x"></i>
                 <h3>Certificado de Participacion</h3>
             </div>
         </div>
