se agrego la seccion programa coaching continuum

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
                         <div class="col-12">
                             <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/264717362?color=4b314c&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                             </div>
-
                         </div>
                         <div class="col-12">
 
@@ -96,8 +95,8 @@
     </div>
 <div id="contador" class="primary">
     <div class="container">
-          <div class="row justify-content-center">
-              <div class="col-5"><H1>EL WEBINAR COMIENZA EN</H1></div>
+          <div class="row">
+              <div class="col-12"><H1>EL WEBINAR COMIENZA EN</H1></div>
               <div class="w-100"></div>
               <div class="col-8">Contador</div>
           </div>
@@ -106,8 +105,11 @@
 </div>
 <div id="listonListoUnirte" class="secondary">
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-8"><H1>¿LISTO PARA UNIRTE A ESTA NUEVA EXPERIENCIA?</H1></div>
+        <div class="row">
+            <div class="col-12">
+              <H1>¿LISTO PARA UNIRTE A ESTA NUEVA EXPERIENCIA?</H1>
+            </div>
+            <div class="col-4"></div>
         </div>
     </div>
 </div>
@@ -116,10 +118,20 @@
         <div class="row">
             <div class="col-8 ilcContinuum">
                 <h1>PROGRAMA DE COACHING CONTINUUM ILC</h1>
+                <p>Es un espacio amplio de compartir herramientas para que todas las semanas puedas tener lecciones, aprendizajes y dsitinciones para ser mejor Coach. Es un lugar donde podrás conocer nuevas tendencias y repasar herramientas que ya posees.</p>
             </div>
             <div class="col-4 secondform"></div>
         </div>
     </div>
+</div>
+<div id="testimonios">
+  <div class="container">
+    <div class="row">
+      <div class="col-4">Video 1</div>
+      <div class="col-4">Video 1</div>
+      <div class="col-4">Video 1</div>
+    </div>
+  </div>
 </div>
 <div id="facebookComentarios" class="grey">
     <div class="container" id="">
