--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
           <div class="row justify-content-center">
               <div class="col-5"><H1>EL WEBINAR COMIENZA EN</H1></div>
               <div class="w-100"></div>
-              <div class="col-8">Contador</div>
+              <div class="col-3"><h3 id="dias">Dias</h3></div>
+              <div class="col-3"><h3 id="horas">Horas</h3></div>
+              <div class="col-3"><h3 id="minutos">Minutos</h3></div>
+              <div class="col-3"><h4 id="segundos">Segundos</h4></div>
           </div>
       </div>
 </div>
@@ -141,7 +144,8 @@
 </footer>
 
 
-<script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
+<script defer src="js/fontawesome5.0.10/svg-with-js/js/fontawesome-all.min.js"></script>
+<script src="js/contador.js"></script>
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 </body>
