Edición de imagenes al centro y ademas tamños logos footer

--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
                     <h1>OBTEN YA</h1>
                     <h2>Tu Guía Práctica para el Coach</h2>
                     <p>Como obsequio por tu suscripción te enviaré una guía en la que conocerás la importancia y el impacto del Coaching como Modelo de Negocio exitoso en el mundo y te daré algunos consejos para diseñar tu propia propuesta de valor.</p>
-                    <img src="images/folleto.png" class="img-fluid" alt="" id="folleto">
+                    <img src="images/folleto.png" class="img-fluid d-block mx-auto" alt="" id="folleto">
                 </div>
             </div>
             <div class="col-6 align-self-end" >
-                <img id="fernandoFoto" src="images/fernando.png" alt="">
+                <img id="fernandoFoto" class="img-fluid d-block" src="images/fernando.png" alt="">
             </div>
         </div>
     </div>
@@ -151,11 +151,11 @@
 </div>
 <footer id="logosPatrocinadores" class="grey">
     <div class="container">
-        <div class="row d-flex justify-content-around">
-            <div class="col-3"><img src="images/logoTitulo.png" alt="" class="logos"></div>
-            <div class="col-3"><img src="images/ilc.png" alt="" class="logos"></div>
-            <div class="col-3"><img src="images/continuum.png" alt="" class="logos"></div>
-            <div class="col-3"><img src="images/fernandologo.png" alt="" class="logos"></div>
+        <div class="row d-flex img-thumbnail justify-content-around  grey">
+            <div class="col-3"><img src="images/logoTitulo.png" alt="" class="img-thumbnail grey align-self-center"></div>
+            <div class="col-3"><img src="images/ilc.png" alt="" class="grey logos"></div>
+            <div class="col-3"><img src="images/continuum.png" alt="" class="grey logos"></div>
+            <div class="col-3"><img src="images/fernandologo.png" alt="" class="grey logos"></div>
 
         </div>
     </div>
