--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
 
       <div class="row justify-content-center">
-        <div class="col-5">
+        <div class="col-5 d-block mx-auto">
             <img src="images/logotitulo.png" id="logoRoi" alt="">
         </div>
         <div class="w-100"></div>
@@ -66,7 +66,7 @@
                 <h3>Ciclo de Videos</h3>
             </div>
             <div class="col-4 col-centered">
-                <i class="fa fa-user fa-4x"></i>
+                <i class="fa fa-users fa-4x"></i>
                 <h3 class="Rojo">Un webinar en vivo</h3>
             </div>
             <div class="col-4 col-centered">
@@ -82,7 +82,7 @@
             <div class="col-6">
                 <h1>Fernando Celis - Master Coach Trainer</h1>
                 <div id="obtenYa">
-                    <h1>OBTEN YA</h1>
+                    <h1 >OBTEN YA</h1>
                     <h2>Tu Guía Práctica para el Coach</h2>
                     <p>Como obsequio por tu suscripción te enviaré una guía en la que conocerás la importancia y el impacto del Coaching como Modelo de Negocio exitoso en el mundo y te daré algunos consejos para diseñar tu propia propuesta de valor.</p>
                     <img src="images/folleto.png" class="img-fluid d-block mx-auto" alt="" id="folleto">
@@ -119,11 +119,11 @@
 <div id="descripcionContinuum" class="light">
     <div class="container">
         <div class="row">
-            <div class="col-8 ilcContinuum">
+            <div class="col-6 ilcContinuum align-self-center">
                 <h1>PROGRAMA DE COACHING CONTINUUM ILC</h1>
                 <p>Es un espacio amplio de compartir herramientas para que todas las semanas puedas tener lecciones, aprendizajes y dsitinciones para ser mejor Coach. Es un lugar donde podrás conocer nuevas tendencias y repasar herramientas que ya posees.</p>
             </div>
-            <div class="col-4">
+            <div class="col-6">
               <!-- Begin Constant Contact Inline Form Code -->
 <div class="ctct-inline-form" data-form-id="782d1b3b-e8d4-4221-9bc4-33720a2fc480"></div>
 <!-- End Constant Contact Inline Form Code -->
@@ -134,6 +134,8 @@
 <div id="testimonios">
   <div class="container">
     <div class="row">
+    <div class="col-12"><h1>Testimoniales</h1></div>
+     <div class="w-100"></div>
       <div class="col-4">
         <iframe src="https://www.youtube.com/embed/_t5OhzCWidA?ecver=2" width="320" height="280" frameborder="0" allow="encrypted-media" style="width:100%;height:100%;left:0" allowfullscreen></iframe>
       </div>
@@ -155,8 +157,8 @@
 </div>
 <footer id="logosPatrocinadores" class="grey">
     <div class="container">
-        <div class="row d-flex img-thumbnail justify-content-around  grey">
-            <div class="col-3"><img src="images/logoTitulo.png" alt="" class="img-thumbnail grey align-self-center"></div>
+        <div class="row d-flex img-thumbnail justify-content-around  grey ">
+            <div class="col-3 align-self-center"><img src="images/logoTitulo.png" alt="" class="img-thumbnail grey "></div>
             <div class="col-3"><img src="images/ilc.png" alt="" class="grey logos"></div>
             <div class="col-3"><img src="images/continuum.png" alt="" class="grey logos"></div>
             <div class="col-3"><img src="images/fernandologo.png" alt="" class="grey logos"></div>
