Agregada Ancla y Estilos css del contador

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         </div>
                         <div class="col-12">
 
-                            <button type="button" class="btn btn-outline-primary btn-lg btn-block" id="suscribetePrograma">Suscribirme al programa gratuito</button>
+                            <button href="#descripcionContinuum" data-ancla="descripcionContinuum" type="button" class="btn btn-outline-primary btn-lg btn-block" id="suscribetePrograma">Suscribirme al programa gratuito</button>
 
                         </div>
                 </div>
@@ -116,7 +116,7 @@
         </div>
     </div>
 </div>
-<div id="descripcionContinuum" class="light">
+<div id="descripcionContinuum" name="descripcionContinuum" class="light">
     <div class="container">
         <div class="row">
             <div class="col-6 ilcContinuum align-self-center">
@@ -135,8 +135,7 @@
   <div class="container">
     <div class="row">
     <div class="col-12"><h1>Testimoniales</h1></div>
-     <div class="w-100"></div>
-      <div class="col-4">
+       <div class="col-4">
         <iframe src="https://www.youtube.com/embed/_t5OhzCWidA?ecver=2" width="320" height="280" frameborder="0" allow="encrypted-media" style="width:100%;height:100%;left:0" allowfullscreen></iframe>
       </div>
       <div class="col-4">
@@ -168,8 +167,9 @@
 </footer>
 
 <script defer src="js/fontawesome5.0.10/svg-with-js/js/fontawesome-all.min.js"></script>
-<script src="js/contador.js"></script>
 <script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/ancla.js"></script>
+<script src="js/contador.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <!-- Begin Constant Contact Active Forms -->
 <script> var _ctct_m = "363fa626f1fb8debcb35b4427e8935a6"; </script>
